ProductCard - clicking on entire card redirects to details page

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -1,182 +1,15 @@
-/* CSS "objects"
------------------------------------------------------------------ */
-.bbGray { border-bottom: 1px solid #e7e7e7 }
-.bbDashed { border-bottom: 1px dashed }
-.baGray { border: 1px solid #e7e7e7 }
+.cursorPointer { cursor:pointer }
 
-.bgWhite { background-color: #fff }
-.bgGray { background-color: #F7F7F7 }
-.bgSilver { background-color: #36474f }
-.bgCharcoal { background-color: #253238 }
+.displayTableCell { display: table-cell }
+.displayTableRow { display: table-row }
 
-.clearfix:after{clear:both;content:".";display:block;font-size:0;height:0;line-height:0;visibility:hidden}
-.clearfix{zoom:1}
+.fwb{ font-weight:bold !important; }
 
-.colorBlack, a.colorBlack {color:#000 !important;}
-.colorBlue, a.colorBlue {color:#04659c !important;}
-.colorGray, a.colorGray {color: $colorGray !important;}
-.colorGreen, a.colorGreen {color: $colorGreen !important;}
-.colorLightGray, a.colorLightGray {color:#BFBFBD !important;}
-.colorWhite, a.colorWhite {color:#fff !important;}
-.colorPink, a.colorPink {color: $colorPink !important;}
-.colorRed, a.colorRed {color: $colorRed !important;}
+.pbm{ padding-bottom:10px !important; }
+.pbl{ padding-bottom:20px !important; }
+.prm{ padding-right:10px !important; }
+.ptm{ padding-top:10px !important; }
 
-.cursorDefault {cursor:default}
-.cursorMove {cursor:move}
-.cursorNotAllowed {cursor:not-allowed}
-.cursorPointer {cursor:pointer}
-.cursorWait {cursor:wait}
+.mtl{ margin-top:20px !important; }
 
-.fs8 {font-size: 8px !important;}
-.fs10 {font-size: 10px !important;}
-.fs11 {font-size: 11px !important;}
-.fs12 {font-size: 12px !important;}   // 12/14
-.fs14 {font-size: 14px !important;}
-.fs16 {font-size: 16px !important;}   // 16/14
-.fs18 {font-size: 18px !important;}   // 18/14
-.fs20 {font-size: 20px !important;}   // 20/14
-.fs26 {font-size: 26px !important;}   // 26/14
-
-.fwn{font-weight:normal !important;}
-.fwb{font-weight:bold !important;}
-
-.man{margin:0 !important;}
-.maxs{margin:2px !important;}
-.mas{margin:5px !important;}
-.mam{margin:10px !important;}
-.mal{margin:20px !important;}
-.mtxs{margin-top:2px !important;}
-.mts{margin-top:5px !important;}
-.mtm{margin-top:10px !important;}
-.mtl{margin-top:20px !important;}
-.mtxl{margin-top:40px !important;}
-.mtn{margin-top:0 !important;}
-.mrxs{margin-right:2px !important;}
-.mrs{margin-right:5px !important;}
-.mrm{margin-right:10px !important;}
-.mrl{margin-right:20px !important;}
-.mrxl{margin-right:40px !important;}
-.mbxs{margin-bottom:2px !important;}
-.mbs{margin-bottom:5px !important;}
-.mbm{margin-bottom:10px !important;}
-.mbl{margin-bottom:20px !important;}
-.mbxl{margin-bottom:40px !important;}
-.mlxs{margin-left:2px !important;}
-.mls{margin-left:5px !important;}
-.mlm{margin-left:10px !important;}
-.mll{margin-left:20px !important;}
-.mlxl{margin-left:40px !important;}
-.mhxs{margin-left:2px !important; margin-right:2px !important;}
-.mhs{margin-left:5px !important; margin-right:5px !important;}
-.mhm{margin-left:10px !important; margin-right:10px !important;}
-.mhl{margin-left:20px !important; margin-right:20px !important;}
-.mha{margin-left:auto !important; margin-right:auto !important;}
-.mhx{margin-left:0 !important; margin-right:0 !important;}
-.mvxs{margin-top:2px !important; margin-bottom:2px !important;}
-.mvs{margin-top:5px !important; margin-bottom:5px !important;}
-.mvm{margin-top:10px !important; margin-bottom:10px !important;}
-.mvl{margin-top:20px !important; margin-bottom:20px !important;}
-
-.paxs{padding:2px !important;}
-.pas{padding:5px !important;}
-.pam{padding:10px !important;}
-.pal{padding:20px !important;}
-.pax{padding:0 !important;}
-.ptxs{padding-top:2px !important;}
-.pts{padding-top:5px !important;}
-.ptm{padding-top:10px !important;}
-.ptl{padding-top:20px !important;}
-.ptxl{padding-top:30px !important;}
-.prxs{padding-right:2px !important;}
-.prs{padding-right:5px !important;}
-.prm{padding-right:10px !important;}
-.prl{padding-right:20px !important;}
-.pbxs{padding-bottom:2px !important;}
-.pbs{padding-bottom:5px !important;}
-.pbm{padding-bottom:10px !important;}
-.pbl{padding-bottom:20px !important;}
-.plxs{padding-left:2px !important;}
-.pls{padding-left:5px !important;}
-.plm{padding-left:10px !important;}
-.pll{padding-left:20px !important;}
-.phxs{padding-left:2px !important; padding-right:2px !important;}
-.phs{padding-left:5px !important; padding-right:5px !important;}
-.phm{padding-left:10px !important; padding-right:10px !important;}
-.phl{padding-left:20px !important; padding-right:20px !important;}
-.pvs{padding-top:3px !important; padding-bottom:3px !important;}
-.pvm{padding-top:10px !important; padding-bottom:10px !important;}
-.pvl{padding-top:20px !important; padding-bottom:20px !important;}
-.pvxl{padding-top:30px !important; padding-bottom:30px !important;}
-
-.hoverUnderline { text-decoration: none; }
-.hoverUnderline:hover { text-decoration: underline; }
-.hoverNoUnderline { text-decoration: underline; }
-.hoverNoUnderline:hover { text-decoration: none; }
-
-.nodecoration {text-decoration:none}
-
-.rounded2 {
-  @include border-radius(2px)
-}
-.rounded3 {
-  @include border-radius(3px)
-}
-
-.tac{text-align:center}
-.tar{text-align:right}
-.tal{text-align:left}
-
-.vab {vertical-align: bottom}
-.vam {vertical-align: middle}
-.vat {vertical-align: top}
-
-.width50 {width:50px !important;}
-.width75 {width:75px !important;}
-.width100 {width:100px !important;}
-.width150 {width:150px !important;}
-.width200 {width:200px !important;}
-.width300 {width:300px !important;}
-.widthAll {width:100% !important;}
-
-.width33p {width:33% !important;}
-.width50p {width:50% !important;}
-
-.borderNone {border:0}
-.heightAll {height:100%}
-.hidden {display:none}
-.floatLeft {float:left}
-.floatRight {float:right}
-.block {display:block }
-.inline {display:inline}
-.displayBlock {display:block}
-.displayTable {display:table}
-.displayTableRow {display:table-row}
-.displayTableCell {display:table-cell}
-.overflowHidden {overflow: hidden}
-.overflowScroll {overflow: scroll}
-.overflowYScroll {overflow-y: scroll}
-.nowrap {white-space: nowrap}
-.wordWrapBreakWord {word-wrap: break-word}
-.wordWrapBreakAll {word-break: break-all}
-.whiteSpaceNormal {white-space: normal}
-
-.relative {position:relative}
-.underline {text-decoration: underline}
-.underlineDotted {border-bottom: 1px dotted}
-.uppercase {text-transform: uppercase}
-
-.inlineBlock {
-  display: -moz-inline-stack;
-  display: inline-block;
-  zoom: 1;
-  *display: inline;
-}
-
-.opacity095 { opacity: 0.95 }
-
-ul.zebra {margin: 0; padding: 0;}
-ul.zebra li {list-style: none}
-ul.zebra li:nth-child(even) { background-color: #F4F4F4; }
-
-ul.inline {list-style-type: none; margin: 0; padding: 0;}
-ul.inline li {list-style: none}
+.widthAll { width: 100% }
