--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -7,6 +7,7 @@
 
 .pbm{ padding-bottom:10px !important; }
 .pbl{ padding-bottom:20px !important; }
+.pam{ padding:10px !important; }
 .prm{ padding-right:10px !important; }
 .ptm{ padding-top:10px !important; }
 
