more shopping cart updates

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -26,6 +26,7 @@
 @import '~bulma/sass/elements/image';
 @import '~bulma/sass/elements/title';
 @import '~bulma/sass/grid/columns';
+@import '~bulma/sass/layout/hero';
 @import '~bulma/sass/layout/section';
 @import '~bulma/sass/layout/footer';
 
