--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -19,6 +19,8 @@
 .mbl{ margin-bottom:30px !important }
 .mtl{ margin-top:20px !important }
 
+.nowrap { white-space: nowrap !important }
+
 .tac{ text-align: center !important }
 .tar{ text-align: right !important }
 
