--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -78,7 +78,7 @@ label {
         display: table-row;
 
         &:nth-child(even) {
-            background-color: #f7f7f7;
+            background-color: $background_color_gray;
         }
 
         .g-spec-label {
