--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -1,9 +1,14 @@
+.colorBlack { color: #000 !important }
+.colorGray { color: $colorGray !important }
+.colorGrayLighter { color: #b0b0b0 !important }
 .cursorPointer { cursor:pointer }
 
 .displayTableCell { display: table-cell }
 .displayTableRow { display: table-row }
 
+.fs14 { font-size: 14px !important }
 .fs16 { font-size: 16px !important }
+.fs24 { font-size: 24px !important }
 .fwb{ font-weight:bold !important }
 
 .pbs{ padding-bottom:5px !important }
@@ -17,9 +22,11 @@
 
 .mbm{ margin-bottom:10px !important }
 .mbl{ margin-bottom:30px !important }
+.mtm{ margin-top:10px !important }
 .mtl{ margin-top:20px !important }
 
 .nowrap { white-space: nowrap !important }
+.wordwrap { white-space: wordwrap !important }
 
 .tac{ text-align: center !important }
 .tar{ text-align: right !important }
