--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -3,27 +3,36 @@
 .colorGrayLighter { color: #b0b0b0 !important }
 .cursorPointer { cursor:pointer }
 
+.displayTable { display: table }
 .displayTableCell { display: table-cell }
 .displayTableRow { display: table-row }
+
+.inlineBlock { display: inline-block }
 
 .fs14 { font-size: 14px !important }
 .fs16 { font-size: 16px !important }
 .fs24 { font-size: 24px !important }
 .fwb{ font-weight:bold !important }
 
-.pbs{ padding-bottom:5px !important }
-.pbm{ padding-bottom:10px !important }
-.pbl{ padding-bottom:20px !important }
-.pam{ padding:10px !important }
-.plm{ padding-left:10px !important }
-.prm{ padding-right:10px !important }
-.prl{ padding-right:20px !important }
-.ptm{ padding-top:10px !important }
+.pan { padding: 0 !important }
+.pam { padding:10px !important }
+.pbs { padding-bottom:5px !important }
+.pbm { padding-bottom:10px !important }
+.pbl { padding-bottom:20px !important }
+.pls { padding-left:5px !important }
+.plm { padding-left:10px !important }
+.prm { padding-right:10px !important }
+.prl { padding-right:20px !important }
+.pts { padding-top:5px !important }
+.ptm { padding-top:10px !important }
 
-.mbm{ margin-bottom:10px !important }
-.mbl{ margin-bottom:30px !important }
-.mtm{ margin-top:10px !important }
-.mtl{ margin-top:20px !important }
+.man { margin:0 !important }
+.mbs { margin-bottom:5px !important }
+.mbm { margin-bottom:10px !important }
+.mbl { margin-bottom:30px !important }
+.mtm { margin-top:10px !important }
+.mtl { margin-top:20px !important }
+.mrl { margin-right:20px !important }
 
 .nowrap { white-space: nowrap !important }
 .wordwrap { white-space: wordwrap !important }
