--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -11,11 +11,13 @@
 
 .fs14 { font-size: 14px !important }
 .fs16 { font-size: 16px !important }
+.fs20 { font-size: 20px !important }
 .fs24 { font-size: 24px !important }
 .fwb{ font-weight:bold !important }
 
 .pan { padding: 0 !important }
 .pam { padding:10px !important }
+.pal { padding:20px !important }
 .pbs { padding-bottom:5px !important }
 .pbm { padding-bottom:10px !important }
 .pbl { padding-bottom:20px !important }
@@ -25,6 +27,7 @@
 .prl { padding-right:20px !important }
 .pts { padding-top:5px !important }
 .ptm { padding-top:10px !important }
+.ptl { padding-top:20px !important }
 
 .man { margin:0 !important }
 .mbs { margin-bottom:5px !important }
@@ -48,3 +51,4 @@
 .width50 { width: 50px !important }
 .width100 { width: 100px !important }
 .width200 { width: 200px !important }
+.width300 { width: 300px !important }
