checkout page updates

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -64,6 +64,10 @@ label {
         vertical-align: top;
         font-weight: 600;
         word-wrap: break-word;
+
+        &.no-line {
+            border: 0 !important;
+        }
     }
 
     .g-spec-content {
