--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -1,6 +1,7 @@
 .colorBlack { color: #000 !important }
 .colorGray { color: $colorGray !important }
 .colorGrayLighter { color: #b0b0b0 !important }
+.colorRed { color: $colorRed !important }
 .cursorPointer { cursor:pointer }
 
 .displayTable { display: table }
