updating product details page

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -29,6 +29,7 @@
 .pts { padding-top:5px !important }
 .ptm { padding-top:10px !important }
 .ptl { padding-top:20px !important }
+.pvl { padding-top:20px !important; padding-bottom:20px !important }
 
 .man { margin:0 !important }
 .mbs { margin-bottom:5px !important }
