--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -16,15 +16,11 @@
 @import '~bulma/sass/base/generic';
 @import '~bulma/sass/base/minireset';
 @import '~bulma/sass/base/helpers'; //?
-@import '~bulma/sass/components/card';
 @import '~bulma/sass/components/level';
-@import '~bulma/sass/components/modal';
-@import '~bulma/sass/elements/button';
 @import '~bulma/sass/elements/content';
-@import '~bulma/sass/elements/form';
 @import '~bulma/sass/elements/other';
 @import '~bulma/sass/elements/icon';
-@import '~bulma/sass/elements/image';
+// @import '~bulma/sass/elements/image';
 @import '~bulma/sass/elements/title';
 @import '~bulma/sass/grid/columns';
 @import '~bulma/sass/layout/hero';
