shopping cart updates

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -20,7 +20,7 @@
 @import '~bulma/sass/elements/content';
 @import '~bulma/sass/elements/other';
 @import '~bulma/sass/elements/icon';
-// @import '~bulma/sass/elements/image';
+@import '~bulma/sass/elements/image';
 @import '~bulma/sass/elements/title';
 @import '~bulma/sass/grid/columns';
 @import '~bulma/sass/layout/hero';
