--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -32,6 +32,10 @@
 $fa-font-path: '~font-awesome/fonts/';
 @import '~font-awesome/scss/font-awesome';
 
+body,
+.section {
+    background-color: #f9f9f9;
+}
 
 label {
     margin-bottom: 0;
@@ -41,6 +45,38 @@ label {
         content: " *"
     }
 }
+
+.pageContainer {
+    padding: 20px 0 60px 0;
+}
+
+.player {
+    position: relative;
+    max-width: 1000px;
+    margin: 0 auto;
+
+    .wrapper {
+        height: 0;
+        max-width: 1000px;
+        z-index: 0;
+        top: 0;
+        left: 0;
+        padding-bottom: 56.25%;
+        margin: 0 auto;
+
+        iframe,
+        object,
+        embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transition: opacity 1s,visibility 0s linear 0s;
+      }
+    }
+}
+
 
 [role="alert"] {
     color: $colorRed;
@@ -78,7 +114,7 @@ label {
         display: table-row;
 
         &:nth-child(even) {
-            background-color: $background_color_gray;
+            background-color: $bgGrayZebra;
         }
 
         .g-spec-label {
