--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -28,14 +28,18 @@ $gutter-width: 1.5rem !default;
 $element-top-margin: $gutter-width/3 !default;
 $element-bottom-margin: ($gutter-width*2)/3 !default;
 
+$bgGrayZebra: #f1f1f1;
+
 $bodyBgColor: #f9f9f9;
 $bodyBgColorDarker: #f3f2f2;
+
 $colorGreen: #407232 !default;
 $colorGreenMedium: #6bc552 !default;
 $colorPink: #ED198A !default;
 $colorGray: #676767 !default;
 $colorGrayDarker: #4D4D4D;
 $colorRed: #e33829;
+$colorBluePurple: #363e5d;
 
 $background_color_gray: #f7f7f7;
 
