--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -4,6 +4,7 @@
 .colorGray { color: $colorGray !important }
 .colorGrayLighter { color: #b0b0b0 !important }
 .colorRed { color: $colorRed !important }
+.colorWhite { color: #fff !important }
 .cursorPointer { cursor:pointer }
 
 .displayTable { display: table }
