--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@import "components/normalize";
 @import "components/prefixer";
 @import "components/variables";
 @import "components/objects";
@@ -25,12 +26,18 @@
 @import '~bulma/sass/grid/columns';
 @import '~bulma/sass/layout/hero';
 @import '~bulma/sass/layout/section';
-@import '~bulma/sass/layout/footer';
 @import '~bulma/sass/utilities/mixins';
 
 
 $fa-font-path: '~font-awesome/fonts/';
 @import '~font-awesome/scss/font-awesome';
+
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 body,
 .section {
