--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -33,7 +33,9 @@ $bgGrayZebra: #f5f5f5;
 $bodyBgColor: #f9f9f9;
 $bodyBgColorDarker: #f3f2f2;
 
-$colorGreen: #407232 !default;
+$borderColorGray: #dfdedf;
+
+$colorGreen: #6ea76b !default;
 $colorGreenMedium: #6bc552 !default;
 $colorPink: #ED198A !default;
 $colorGray: #676767 !default;
