--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -48,6 +48,7 @@
 .mtm { margin-top:10px !important }
 .mtl { margin-top:20px !important }
 .mrl { margin-right:20px !important }
+.mlm { margin-left:10px !important }
 
 .nowrap { white-space: nowrap !important }
 .wordwrap { white-space: wordwrap !important }
