--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -29,6 +29,7 @@
 .pbs { padding-bottom:5px !important }
 .pbm { padding-bottom:10px !important }
 .pbl { padding-bottom:20px !important }
+.phs { padding-left:5px !important; padding-right:5px !important }
 .phm { padding-left:10px !important; padding-right:10px !important }
 .phl { padding-left:20px !important; padding-right:20px !important }
 .pls { padding-left:5px !important }
@@ -45,6 +46,7 @@
 .mbs { margin-bottom:5px !important }
 .mbm { margin-bottom:10px !important }
 .mbl { margin-bottom:30px !important }
+.mts { margin-top:5px !important }
 .mtm { margin-top:10px !important }
 .mtl { margin-top:20px !important }
 .mrl { margin-right:20px !important }
