Lots of updates

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -181,3 +181,10 @@ ul.disc {
         padding-bottom: 10px;
     }
 }
+
+
+/* element.io overrides */
+.el-notification__content {
+    text-align: inherit;
+    color: #6f7071;
+}
