checkout page updates

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -4,6 +4,7 @@
 @import "components/prefixer";
 @import "components/variables";
 @import "components/objects";
+@import "components/mixins";
 
 @import '~animate.css';
 .animated {
