--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -39,6 +39,7 @@ $colorGreen: #6ea76b !default;
 $colorGreenMedium: #6bc552 !default;
 $colorPink: #ED198A !default;
 $colorGray: #676767 !default;
+$colorGrayLighter: #b0b0b0;
 $colorGrayDarker: #4D4D4D;
 $colorRed: #e33829;
 $colorBluePurple: #363e5d;
