Lots of cart updates

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -22,6 +22,7 @@
 .fs20 { font-size: 20px !important }
 .fs24 { font-size: 24px !important }
 .fwb{ font-weight:bold !important }
+.fw600{ font-weight:600 !important }
 
 .pan { padding: 0 !important }
 .pam { padding:10px !important }
@@ -40,6 +41,7 @@
 .pts { padding-top:5px !important }
 .ptm { padding-top:10px !important }
 .ptl { padding-top:20px !important }
+.ptxl { padding-top:40px !important }
 .pvl { padding-top:20px !important; padding-bottom:20px !important }
 
 .man { margin:0 !important }
@@ -68,5 +70,6 @@
 .widthAll { width: 100% !important }
 .width50 { width: 50px !important }
 .width100 { width: 100px !important }
+.width125 { width: 125px !important }
 .width200 { width: 200px !important }
 .width300 { width: 300px !important }
