Lots of updates

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -67,6 +67,7 @@
 .vat { vertical-align: top !important }
 
 .heightAll { height: 100% !important }
+.relative { position: relative !important }
 .widthAll { width: 100% !important }
 .width50 { width: 50px !important }
 .width100 { width: 100px !important }
