shipping page updates

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -1,5 +1,6 @@
 .bbGray { border-bottom: 1px solid $borderColorGray !important }
 .bgBlack { background-color: #000 !important }
+.borderRed { border-color: $colorRed !important }
 
 .colorBlack { color: #000 !important }
 .colorGreen { color: $colorGreen !important }
