updating checkout flow design

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -17,6 +17,7 @@
 .inline { display: inline }
 .inlineBlock { display: inline-block }
 
+.fs11 { font-size: 11px !important }
 .fs12 { font-size: 12px !important }
 .fs14 { font-size: 14px !important }
 .fs16 { font-size: 16px !important }
