--- a/src/assets/css/components/_mixins.scss
+++ b/src/assets/css/components/_mixins.scss
@@ -3,3 +3,59 @@
   -moz-border-radius: $radius;
   border-radius: $radius;
 }
+
+// Adds a browser prefix to the property
+// @param {*} $property Property
+// @param {*} $value Value
+@mixin css3-prefix($property, $value) {
+  -webkit-#{$property}: #{$value};
+   -khtml-#{$property}: #{$value};
+     -moz-#{$property}: #{$value};
+      -ms-#{$property}: #{$value};
+       -o-#{$property}: #{$value};
+          #{$property}: #{$value};
+}
+
+// Border Radius
+// @param {Size} $radius [5px] - Radius
+// @require {mixin} css3-prefix
+@mixin border-radius($radius: 5px) {
+    @include css3-prefix('border-radius', $radius);
+}
+
+// Border Radius Separate
+// @param {Size} $topLeftRadius [5px] - Top Left
+// @param {Size} $topRightRadius [5px] - Top Right
+// @param {Size} $bottomLeftRadius [5px] - Bottom Left
+// @param {Size} $bottomRightRadius [5px] - Bottom Right
+
+@mixin border-radius-separate($topLeftRadius: 5px, $topRightRadius: 5px, $bottomLeftRadius: 5px, $bottomRightRadius: 5px) {
+  -webkit-border-top-left-radius:     $topLeftRadius;
+  -webkit-border-top-right-radius:    $topRightRadius;
+  -webkit-border-bottom-right-radius: $bottomRightRadius;
+  -webkit-border-bottom-left-radius:  $bottomLeftRadius;
+
+  -moz-border-radius-topleft:     $topLeftRadius;
+  -moz-border-radius-topright:    $topRightRadius;
+  -moz-border-radius-bottomright: $bottomRightRadius;
+  -moz-border-radius-bottomleft:  $bottomLeftRadius;
+
+  border-top-left-radius:     $topLeftRadius;
+  border-top-right-radius:    $topRightRadius;
+  border-bottom-right-radius: $bottomRightRadius;
+  border-bottom-left-radius:  $bottomLeftRadius;
+}
+
+// Box Shadow
+// @param {Size} $x [2px] - X
+// @param {Size} $y [2px] - Y
+// @param {Size} $blur [5px] - Blur
+// @param {Color} $color [rgba(0,0,0,.4)] - Color
+// @param {Boolean} $inset - Inset
+@mixin box-shadow($x: 2px, $y: 2px, $blur: 5px, $color: rgba(0,0,0,.4), $inset: "") {
+    @if ($inset != "") {
+        @include css3-prefix('box-shadow', $inset $x $y $blur $color);
+    } @else {
+        @include css3-prefix('box-shadow', $x $y $blur $color);
+    }
+}
