--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -14,6 +14,8 @@
 .displayTableCell { display: table-cell }
 .displayTableRow { display: table-row }
 
+.floatRight { float: right !important }
+
 .inline { display: inline }
 .inlineBlock { display: inline-block }
 
