--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -78,6 +78,25 @@ ul.disc {
     padding: 20px 0 60px 0;
 }
 
+
+.container-skinny {
+    max-width: 700px;
+    margin: 0 auto; 
+}
+
+// @media screen and (min-width: 1192px) {
+//     .container-skinny {
+//         max-width: 700px;
+//     }
+// }
+
+// @media screen and (min-width: 1000px) {
+//     .container-skinny {
+//         margin: 0 auto;    
+//     }
+// }
+
+
 .player {
     position: relative;
     max-width: 1000px;
