--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -38,6 +38,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    font-size: 16px;
 }
 
 body,
@@ -231,4 +232,34 @@ ul.disc {
 .el-notification__content {
     text-align: inherit;
     color: #6f7071;
+}
+
+.el-dialog {
+    position: relative;
+}
+.el-dialog:first-child:before {
+    content:'';
+    position:absolute;
+    width:100%;
+    height:4px;
+    background: #ff60b2; /* Old browsers */
+    background: -moz-linear-gradient(left, #ff60b2 0%, #ce006a 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #ff60b2 0%,#ce006a 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #ff60b2 0%,#ce006a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    top:-2px;
+    left:0;
+}
+
+.el-button {
+    @include grow()
+}
+.el-button:hover {
+    @include growHover()
+}
+
+.grow {
+   @include grow()
+}
+.grow:hover {
+    @include growHover()
 }
