--- a/src/assets/css/components/_mixins.scss
+++ b/src/assets/css/components/_mixins.scss
@@ -59,3 +59,25 @@
         @include css3-prefix('box-shadow', $x $y $blur $color);
     }
 }
+
+@mixin grow($easeOutTransition: 0.2s) {
+    -webkit-transition:all $easeOutTransition ease-out;
+    -moz-transition:all $easeOutTransition ease-out;
+    -ms-transition:all $easeOutTransition ease-out;
+    -o-transition:all $easeOutTransition ease-out;
+    transition:all $easeOutTransition ease-out;
+}
+
+@mixin growHover($scale: 1.05) {
+    -webkit-transform:scale($scale);
+    -moz-transform:scale($scale);
+    -ms-transform:scale($scale);
+    -o-transform:scale($scale);
+    transform:scale($scale);
+}
+
+@mixin text-shadow() {
+    text-shadow: 0 1px 2px rgba(0,0,0,.2)
+}
+
+
