--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -25,6 +25,7 @@
 .fs16 { font-size: 16px !important }
 .fs20 { font-size: 20px !important }
 .fs24 { font-size: 24px !important }
+.fs30 { font-size: 30px !important }
 .fwb{ font-weight:bold !important }
 .fw600{ font-weight:600 !important }
 
