adding endpoint to set shipping address in the cart model

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -79,3 +79,5 @@
 .width125 { width: 125px !important }
 .width200 { width: 200px !important }
 .width300 { width: 300px !important }
+
+.mono { font-family: monospace, monospace !important }
