CSS updates for better responsiveness on mobile devices

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -257,6 +257,12 @@ ul.disc {
     @include growHover()
 }
 
+@media #{$small-and-down} {  
+    .el-notification {
+        right: auto;
+    }
+}
+
 .grow {
    @include grow()
 }
