--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -194,10 +194,11 @@ ul.disc {
 }
 
 .checkout_form_value {
-    display: inline-block;
+    // display: inline-block;
+    display: block;
     margin-bottom: 15px;
     position: relative;
-    width: 100%;
+    // width: 100%;
 
     .el-input__inner {
         font-size: 20px !important;
