orders page - more updates

--- a/src/assets/css/components/_objects.scss
+++ b/src/assets/css/components/_objects.scss
@@ -50,6 +50,7 @@
 .pvl { padding-top:20px !important; padding-bottom:20px !important }
 
 .man { margin:0 !important }
+.mha { margin: 0 auto !important }
 .mbs { margin-bottom:5px !important }
 .mbm { margin-bottom:10px !important }
 .mbl { margin-bottom:20px !important }
@@ -68,6 +69,7 @@
 
 .underlineDotted { border-bottom: 1px dotted !important }
 
+.vab { vertical-align: baseline !important }
 .vam { vertical-align: middle !important }
 .vat { vertical-align: top !important }
 
