--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -11,19 +11,17 @@
     animation-duration: .377s;
 }
 
-
-//@import '~bulma';
-@import '~bulma/sass/utilities/_all';
-
+@import '~bulma/sass/utilities/functions';
+@import '~bulma/sass/utilities/variables';
+@import '~bulma/sass/utilities/mixins';
+// @import '~bulma/sass/utilities/controls';
 @import '~bulma/sass/base/generic';
 @import '~bulma/sass/base/minireset';
 @import '~bulma/sass/base/helpers'; //?
 @import '~bulma/sass/components/level';
 @import '~bulma/sass/elements/content';
 @import '~bulma/sass/elements/other';
-@import '~bulma/sass/elements/icon';
 @import '~bulma/sass/elements/image';
-@import '~bulma/sass/elements/title';
 @import '~bulma/sass/grid/columns';
 @import '~bulma/sass/layout/hero';
 @import '~bulma/sass/layout/section';
