--- a/src/assets/css/components/_variables.scss
+++ b/src/assets/css/components/_variables.scss
@@ -1,4 +1,3 @@
-
 /*** Global ***/
 $content-max-width: 1366px;
 
@@ -43,6 +42,10 @@ $colorGrayLighter: #b0b0b0;
 $colorGrayDarker: #4D4D4D;
 $colorRed: #e33829;
 $colorBluePurple: #363e5d;
+
+
+$link: #0066c0;
+$link-hover: #c45500;
 
 $background_color_gray: #f7f7f7;
 
